--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Tic Tac Toe</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,14 +12,40 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      <h1>Example</h1>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
+      <div class="game-view">
+        <header>
+          <h1>Tic Tac Toe</h1>
+          <button class="btn btn-success sign-out-btn">Sign Out</button>
+        </header>
+        <div class="content">
+          <aside>
+            <h2>Game Info</h2>
+          </aside>
+          <div class="board-div">
+            <section class="board-background">
+              <div class="board-square">
+              </div>
+              <div class="board-square">
+              </div>
+              <div class="board-square">
+              </div>
+              <div class="board-square">
+              </div>
+              <div class="board-square">
+              </div>
+              <div class="board-square">
+              </div>
+              <div class="board-square">
+              </div>
+              <div class="board-square">
+              </div>
+              <div class="board-square">
+              </div>
+            </section>
+          </div>
+        </div>
+      </div>
+
     </body>
 </html>
