--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
           </aside>
           <div class="board-div">
             <section class="board-background">
-              <div class="board-square">
+              <div id="0" class="board-square">
               </div>
-              <div class="board-square">
+              <div id="1" class="board-square">
               </div>
-              <div class="board-square">
+              <div id="2" class="board-square">
               </div>
-              <div class="board-square">
+              <div id="3" class="board-square">
               </div>
-              <div class="board-square">
+              <div id="4" class="board-square">
               </div>
-              <div class="board-square">
+              <div id="5" class="board-square">
               </div>
-              <div class="board-square">
+              <div id="6" class="board-square">
               </div>
-              <div class="board-square">
+              <div id="7" class="board-square">
               </div>
-              <div class="board-square">
+              <div id="8" class="board-square">
               </div>
             </section>
           </div>
