--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
+      <!--Start Login View -->
       <div class="container login-view">
+        <div id="alert-div" class="alert hidden" role="alert">
+        </div>
         <div class="row">
           <div class="col-xs-2">
           </div>
@@ -63,8 +66,12 @@
             </form>
           </div>
           <div class="col-xs-2">
+            <p class="signup-info"></p>
           </div>
         </div>
+        <footer>
+          <h3 class="footer-text">Made With &hearts; by Aaron Vale</h3>
+        </footer>
       </div>
       <!--End Login-View  -->
 
