Add UI Upgrades and Login, Logout Functionality
Improved the UI for both the login and gameplay views, to match the
project theme. Added the ability to register login and logout events
with the API. Added an info box that welcomes the user and announces
the winner, or if there is a tie.

--- a/index.html
+++ b/index.html
@@ -78,35 +78,48 @@
 
       <!-- Start Game-View -->
       <div class="game-view hidden">
-        <header>
-          <h1>Tic Tac Toe</h1>
-          <button class="btn btn-success logout-btn">Sign Out</button>
-        </header>
-        <div class="content">
-          <aside>
-            <h2>Game Info</h2>
-          </aside>
-          <div class="board-div">
-            <section class="board-background">
-              <div id="0" class="board-square">
+        <div class="container">
+          <div class="row header">
+            <div class="col-xs-4">
+            </div>
+            <div class="col-xs-4">
+              <h1>Tic Tac Toe</h1>
+            </div>
+            <div class="col-xs-2">
+            </div>
+            <div class="col-xs-2">
+              <button class="btn btn-success logout-btn">Sign Out</button>
+            </div>
+          </div>
+          <div class="row content">
+            <div class="aside col-xs-3">
+              <h2>Game Info</h2>
+              <div class="fenway-jumbotron">
+                <p class="jumbotron-text"></p>
               </div>
-              <div id="1" class="board-square">
-              </div>
-              <div id="2" class="board-square">
-              </div>
-              <div id="3" class="board-square">
-              </div>
-              <div id="4" class="board-square">
-              </div>
-              <div id="5" class="board-square">
-              </div>
-              <div id="6" class="board-square">
-              </div>
-              <div id="7" class="board-square">
-              </div>
-              <div id="8" class="board-square">
-              </div>
-            </section>
+            </div>
+            <div class="board-div col-xs-9">
+              <section class="board-background">
+                <div id="0" class="board-square">
+                </div>
+                <div id="1" class="board-square">
+                </div>
+                <div id="2" class="board-square">
+                </div>
+                <div id="3" class="board-square">
+                </div>
+                <div id="4" class="board-square">
+                </div>
+                <div id="5" class="board-square">
+                </div>
+                <div id="6" class="board-square">
+                </div>
+                <div id="7" class="board-square">
+                </div>
+                <div id="8" class="board-square">
+                </div>
+              </section>
+            </div>
           </div>
         </div>
       </div>
