Fix Scoreboard Bug, Add UI Improvements
Fixed a bug with ties displaying on the scoreboard as X wins. Also added
visual improvements.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="col-xs-4">
               <div class="buttons">
-                <button id="reset-btn" class="btn btn-default hidden">Play Again?</button>
+                <button id="reset-btn" class="btn hidden">Play Again?</button>
                 <button type="button" class="btn game-btn change-pass" data-toggle="modal" data-target="#changePassModal">Change Password</button>
                 <button class="btn game-btn logout-btn">Sign Out</button>
                 <!--Modal  -->
@@ -125,6 +125,10 @@
               <h2>Game Info</h2>
               <div class="fenway-jumbotron">
                 <p class="jumbotron-text"></p>
+              </div>
+              <h2>At Bat</h2>
+              <div class="at-bat">
+                <p class="now-up"></p>
               </div>
               <h2>Standings</h2>
               <table class="table">
