--- a/index.html
+++ b/index.html
@@ -87,15 +87,40 @@
             </div>
             <div class="col-xs-4">
               <div class="buttons">
+                <button id="online-play-btn" type="button" data-toggle="modal" data-target="#onlinePlayModal" class="btn">Online Play</button>
                 <button id="reset-btn" class="btn hidden">Play Again?</button>
                 <button type="button" class="btn game-btn change-pass" data-toggle="modal" data-target="#changePassModal">Change Password</button>
                 <button class="btn game-btn logout-btn">Sign Out</button>
-                <!--Modal  -->
+
+                <!-- Online Play Modal -->
+                <div class="modal fade" id="onlinePlayModal" tabindex="-1" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Join a Game</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <form id="join-game-form">
+                          <div class="form-group">
+                            <label class="form-control-label">Enter Game ID for game you wish to join</label>
+                            <input type="number" class="form-control" name="id" placeholder="ID">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!--Change Password Modal  -->
                 <div class="modal fade" id="changePassModal" tabindex="-1" aria-hidden="true">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Change Password</h5>
+                        <h5 class="modal-title">Change Password</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                         </button>
@@ -123,7 +148,8 @@
           <div class="row content">
             <div class="aside col-xs-3">
               <h2>Game Info</h2>
-              <div class="fenway-jumbotron">
+              <div class="fenway-jumbotron slider">
+                <p class="game-id"></p>
                 <p class="jumbotron-text"></p>
               </div>
               <h2>At Bat</h2>
