Fix bug with online play
Fixed a bug where one player's moves in an online game show up on the
other player's game board, but not the other way around. Also added UI
improvements and changed the way to join an online game.

--- a/index.html
+++ b/index.html
@@ -105,11 +105,13 @@
                       <div class="modal-body">
                         <form id="join-game-form">
                           <div class="form-group">
-                            <label class="form-control-label">Enter Game ID for game you wish to join</label>
+                            <label class="form-control-label">To join another player's game, enter their game ID below and press Join Game.</label>
                             <input type="number" class="form-control" name="id" placeholder="ID">
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-primary">Join Game</button>
                           </div>
                         </form>
+                        <p>To host an online game, click the button below.</p>
+                        <button id="host-game-btn" class="btn btn-success">Host Game</button>
                       </div>
                     </div>
                   </div>
