Add additional player tokens, code comments
Added some additional player tokens for player O. Additionally, removed
any console.log statements, and added code comments throughout to
improve code readability.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
           <div class="row header">
             <div class="col-xs-4">
               <div class="buttons-left">
-                <button id="chat-btn" class="btn btn-info">Chat</button>
-                <button id="settings-btn" class="btn btn-info">Settings</button>
+                <button id="chat-btn" class="btn btn-left">Chat</button>
+                <button id="settings-btn" class="btn btn-left">Settings</button>
               </div>
             </div>
             <div class="col-xs-4">
@@ -166,7 +166,7 @@
                       <a class="dropdown-item x-item">Crossed Bats</a>
                     </div>
                   </div>
-                  <h2>O Token Display</h2>
+                  <h2 class="h2-o">O Token Display</h2>
                   <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="o-token" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       O (Default)
@@ -175,10 +175,11 @@
                       <a class="dropdown-item o-item">O (Default)</a>
                       <a class="dropdown-item o-item">Hanging Sox Logo</a>
                       <a class="dropdown-item o-item">Red Sox Logo</a>
+                      <a class="dropdown-item o-item">Baseball</a>
+                      <a class="dropdown-item o-item">Evil Empire</a>
                     </div>
                   </div>
                 <button type="submit" class="btn btn-success save-settings-btn">Save Settings</button>
-                <button id="close-settings-btn" class="btn btn-default settings-btn">Close Settings</button>
               </div>
               <div class="chat-div hidden text-center">
                 <h2>Game Chat</h2>
