Fix Deploy Formatting Issues
Fixed some CSS issues associated with deploying project to GitHub pages.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               </div>
               <div class="game-info">
                 <h2>Game Info</h2>
-                <div class="fenway-jumbotron slider">
+                <div class="fenway-jumbotron">
                   <p class="game-id"></p>
                   <p class="jumbotron-text"></p>
                 </div>
